--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ body {font-size:16px;}
   </div>
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Who are we?</a>
-        <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Designers</a> 
+    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About Us</a>
+        <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Team</a> 
     <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a>  
-    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Packages</a> 
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Courses</a> 
+    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Apply</a>
   </div>
 </nav>
 
@@ -43,10 +43,8 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo"><b>Web Developer</b></h1>
-    <h1 class="w3-xxxlarge w3-text-red"><b>Who are we?</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Hot Beans Web Development is a web development company that strives to meet the needs of both its clients and their customers. We have a team of experienced staff ready to take on any challange you can offer.</p>
+    <h1 class="w3-jumbo" style=""><b>Hot Beans</b></h1>
+    <p>Welcome to Hot Beans Web Development. We are a family run business based in the centre of Colchester, Essex. Our experienced team is ready to get your business online.</p>
   </div>
 
   <!-- Modal for full size images on click-->
@@ -62,12 +60,9 @@ body {font-size:16px;}
   <div class="w3-container" id="designers" style="margin-top:25px">
     <h1 class="w3-xxxlarge w3-text-red"><b>The Team</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>The best team in the world.</p>
-    <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <p>Our founding team is made up of highly skilled individuals who have years of experience with web development. With 1,000s of clients between them, our team can face any challange you are prepared to throw at them.
     </p>
-    <p><b>Our designers are thoughtfully chosen</b>:</p>
+    <p>Our team is also ready to train any eager learners who want to take on the challange of 
   </div>
 
   <!-- The Team -->
