--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@ body {font-size:16px;}
     <h3 class="w3-padding-64"><b>Hot Beans<br></b></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
     <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About Us</a>
         <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Team</a> 
     <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a>  
     <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Courses</a> 
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Apply</a>
+    <a href="#apply" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Apply</a>
   </div>
 </nav>
 
@@ -42,27 +41,21 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo" style=""><b>Hot Beans</b></h1>
+  <div class="w3-container" style="margin-top:0px" id="showcase">
+    <h1 class="w3-jumbo" style="color: #f44336;"><b>Hot Beans</b></h1>
     <p>Welcome to Hot Beans Web Development. We are a family run business based in the centre of Colchester, Essex. Our experienced team is ready to get your business online.</p>
-  </div>
-
-  <!-- Modal for full size images on click-->
-  <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
-    <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
-    <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-      <img id="img01" class="w3-image">
-      <p id="caption"></p>
-    </div>
   </div>
 
     <!-- Designers -->
   <div class="w3-container" id="designers" style="margin-top:25px">
     <h1 class="w3-xxxlarge w3-text-red"><b>The Team</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Our founding team is made up of highly skilled individuals who have years of experience with web development. With 1,000s of clients between them, our team can face any challange you are prepared to throw at them.
+    <p>Below are the founders of our team. Between them they have a portfolio of 1,000s of happy and satifised clients, showing you just what they can achieve. All our senior developers
+      are experienced in HTML, CSS, JavaScript, PHP, NodeJS and many other languages. Many are also skilled in image manipulation, logo design, product photography with new skills being
+      developed daily. 
     </p>
-    <p>Our team is also ready to train any eager learners who want to take on the challange of 
+    <p>With this experience, our senior team is also keen to begin training the next generation of Hot Beans Developers. If you are interested in such a position, please visit our
+    <a href="#apply">apply</a> section.</p>
   </div>
 
   <!-- The Team -->
@@ -157,7 +150,7 @@ body {font-size:16px;}
   </div>
   
   <!-- Contact -->
-  <div class="w3-container" id="contact" style="margin-top:75px">
+  <div class="w3-container" id="apply" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
