--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>HotBeans Web Development</title>
+<title>Sam Smells</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="style.css"> 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
@@ -42,14 +42,14 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:0px" id="showcase">
-    <h1 class="w3-jumbo" style="color: #f44336;"><b>Hot Beans</b></h1>
+    <h1 class="w3-jumbo" style="color: #ffae00;"><b>Hot Beans</b></h1>
     <p>Welcome to Hot Beans Web Development. We are a family run business based in the centre of Colchester, Essex. Our experienced team is ready to get your business online.</p>
   </div>
 
     <!-- Designers -->
   <div class="w3-container" id="designers" style="margin-top:25px">
     <h1 class="w3-xxxlarge w3-text-red"><b>The Team</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <hr style="width:50px;border:5px solid #ffae00" class="w3-round">
     <p>Below are the founders of our team. Between them they have a portfolio of 1,000s of happy and satifised clients, showing you just what they can achieve. All our senior developers
       are experienced in HTML, CSS, JavaScript, PHP, NodeJS and many other languages. Many are also skilled in image manipulation, logo design, product photography with new skills being
       developed daily. 
@@ -62,31 +62,31 @@ body {font-size:16px;}
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team2.jpg" alt="John, our CEO and Founder" style="width:100%">
+        <img src="w3images/team2.jpg" alt="Dave, our CEO and Founder" style="width:100%">
         <div class="w3-container">
-          <h3>John Doe</h3>
+          <h3>Dave Cooper</h3>
           <p class="w3-opacity">CEO & Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Dave founded the company back in 2013 and since then has been working to perfect clients websites to ensure they meet their requirements. In his downtime, Dave enjoys cycling, golf and playing Chess.</p>
         </div>
       </div>
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+        <img src="w3images/team1.jpg" alt="Leo, our CTO" style="width:100%">
         <div class="w3-container">
-          <h3>Jane Doe</h3>
-          <p class="w3-opacity">Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <h3>Leo Burns</h3>
+          <p class="w3-opacity">CTO</p>
+          <p>Leo joined the team in 2017 and has since been managing the companies backend to ensure client security. In his downtime, Leo enjoys baking, train spotting and developing personal projects.</p>
         </div>
       </div>
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
+        <img src="w3images/team3.jpg" alt="Megan" style="width:100%">
         <div class="w3-container">
-          <h3>Mike Ross</h3>
-          <p class="w3-opacity">Architect</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <h3>Megan Edwards</h3>
+          <p class="w3-opacity">Head of Training</p>
+          <p>Megan joined the team in 2019 as a Senior Developer. In 2020, she took over all training at Hot Beans. In her downtime, Megan enjoys sewing and being with her dogs and family.</p>
         </div>
       </div>
     </div>
@@ -95,7 +95,7 @@ body {font-size:16px;}
   <!-- Services -->
   <div class="w3-container" id="services" style="margin-top:25px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Services.</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <hr style="width:50px;border:5px solid #ffae00" class="w3-round">
     <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
     <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
     dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
@@ -106,12 +106,15 @@ body {font-size:16px;}
 
   <!-- Packages / Pricing Tables -->
   <div class="w3-container" id="packages" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Packages.</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+    <h1 class="w3-xxxlarge w3-text-red"><b>Courses</b></h1>
+    <hr style="width:50px;border:5px solid #ffae00" class="w3-round">
+    <p>If you are looking at joining us or any other web development company then experience is key and a good way to prove experience is with courses or qualifications. Below are some courses
+      from some excellent providers that we have used here at HotBeans for many years.
+    </p>
   </div>
 
   <div class="w3-row-padding">
+  <!-- sam smells -->
     <div class="w3-half w3-margin-bottom">
       <ul class="w3-ul w3-light-grey w3-center">
         <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
@@ -132,7 +135,25 @@ body {font-size:16px;}
         
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-red w3-xlarge w3-padding-32">Pro</li>
+        <li class=" w3-xlarge w3-padding-32">Intermediate</li>
+        <li class="w3-padding-16">Floorplanning</li>
+        <li class="w3-padding-16">50 hours support</li>
+        <li class="w3-padding-16">Photography</li>
+        <li class="w3-padding-16">50% furniture discount</li>
+        <li class="w3-padding-16">GREAT deals</li>
+        <li class="w3-padding-16">
+          <h2>$ 249</h2>
+          <span class="w3-opacity">per room</span>
+        </li>
+        <li class="w3-light-grey w3-padding-24">
+          <button class="w3-button w3-red w3-padding-large w3-hover-black">Sign Up</button>
+        </li>
+      </ul>
+    </div>
+
+    <div class="w3-half">
+      <ul class="w3-ul w3-light-grey w3-center">
+        <li class="w3-red w3-xlarge w3-padding-32">Professional</li>
         <li class="w3-padding-16">Floorplanning</li>
         <li class="w3-padding-16">50 hours support</li>
         <li class="w3-padding-16">Photography</li>
@@ -152,7 +173,7 @@ body {font-size:16px;}
   <!-- Contact -->
   <div class="w3-container" id="apply" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Contact.</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <hr style="width:50px;border:5px solid #ffae00" class="w3-round">
     <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
     <form action="/action_page.php" target="_blank">
       <div class="w3-section">
@@ -200,3 +221,55 @@ function onClick(element) {
 
 </body>
 </html>
+<!-- Sam smells really bad -->
+                                  hatthefuc                                         
+                              kdidyoujustfuckin                                     
+                          gsayaboutme,youlittlebit                                  
+                  ch?I’llhaveyouk           nowIgrad                                
+               uatedtopofmyc                  lassint                               
+             heNavySeals,and                   I’vebe                               
+             eninvolvedinnume                   rouss                               
+             ecretraidso nAl-Qu    aeda,andIha  veove                               
+             r300confirmedkills. Iamtrainedingor illa                               
+             warfareandI’mthet  opsniperintheentireUS                               
+            armed  forces.Youa  renothingtomebutjusta                               
+           nothertarget.Iwillwi peyouthefuc koutwithp                               
+          recisionthelikesofw   hichhasneverbeenseenb                               
+         eforeonthisEarth,markmyfuckingwords.  Youth                                
+        inkyo          ucangetawaywithsay     ingtha                                
+       tshit                      tomeove     rtheIn                                
+      ternet                                 ?Think                                 
+     again,                                 fucker                                  
+    .Aswes                                  peakIa                                  
+    mcont                      acti        ngmyse                                   
+    cret                      netwo rko   fspies                                    
+    acro                      sstheUSAan  dyour                         IPisbeing   
+   trace                      drightnow  soyou                        betterprepar  
+   efort                     hestorm,ma ggot.                       Thesto    rmth  
+   atwip                     esoutthep  athet                     iclittl    ethin  
+   gyouc                    allyourli  fe.You                   ’refuck     ingde   
+   ad,ki                    d.Icanbe   anywhere,anytime,and   Icankil     lyoui     
+    nove                   rsevenhu    ndredways,andthat’sjustwithm      ybare      
+    hand                   s.Noton     lyamI   exten   sivelytrai      nedinu       
+    narm                  edcombat      ,bu   tIhaveaccesstothe      entire         
+    arsen               aloft heUni         tedStatesMarineCor     psandIw          
+     illu             seitt  oitsful         lextenttowipeyourmi   serablea         
+     ssoff            thefaceoftheco                     ntinent,    youlittle      
+      shit.            Ifonlyyoucou              ldha       veknow  nwha tunho      
+      lyretr              ibut                   iony        ourlit  tle“clev       
+       er”com                                men              twasa    bout         
+        tobringd                            ownu              ponyo     u,ma        
+           ybeyouw                          ould              haveheldyourfu        
+ cki        ngtongue.B                       utyo           ucouldn’t,youdi         
+dn’t,an    dnowyou’repayingt                  hep         rice,yo    u              
+goddamnidiot.I willshitfuryalloveryo           uand    youwill                      
+drow ninit.You’refu    ckingdead,kiddo .Whatthefuckdidyoujus                        
+ tfuc  kingsayabo         utme,youlit tlebitch?I’llhaveyo                           
+  ukno   wIgrad         uatedtopofmy class intheNavySe                              
+   als,andI’v           ebeeninvolv  edin                                           
+    numerou              ssecretr   aids                                            
+      onA                l-Quae    da,a                                             
+                          ndIhav  eove                                              
+                           r300confir                                               
+                             medkill                                                
+                               s.I    
