--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ body {font-size:16px;}
   <div class="w3-container" id="team" style="margin-top:25px">
     <h1 class="w3-xxxlarge w3-text-red"><b>The Team</b></h1>
     <hr style="width:50px;border:5px solid #ffae00" class="w3-round">
+    <b>Senior Team</b>
     <p>Below are the founders of our team. Between them they have a portfolio of 1,000s of happy and satifised clients, showing you just what they can achieve. All our senior developers
       are experienced in HTML, CSS, JavaScript, PHP, NodeJS and many other languages. Many are also skilled in image manipulation, logo design, product photography with new skills being
       developed daily. 
